--- a/doc/bonsai.bib
+++ b/doc/bonsai.bib
@@ -15,6 +15,11 @@ title = "{Dynamic Language Runtime}",
 url = "http://www.codeplex.com/dlr"
 }
 
+@website { dlr_wiki,
+title = "{Wikipedia - Dynamic Language Runtime}",
+url = "http://en.wikipedia.org/wiki/Dynamic_Language_Runtime"
+}
+
 @website { jruby,
 title = "{JR}uby",
 url = "http://jruby.codehaus.org/"
