--- a/doc/rezumat.tex
+++ b/doc/rezumat.tex
@@ -27,8 +27,9 @@ Lucrarea de față prezintă un limbaj dinamic numit Bonsai. Principalele sale c
 \item suportă o formă limitată de \emph{pattern-matching} peste parametrii funcțiilor
 \item deține un mecanism extensibil de declarare a structurilor de date 
 \item implementează o formă de programare orientată obiect bazată pe prototipuri
+\item poate utiliza bibliotecile .NET.
 \end{itemize}
 
-Platforma utilizată este .NET Framework, împreună cu Dynamic Language Runtime. Întreaga suită de biblioteci .NET este astfel disponibilă, indiferent de limbajul in care au fost ele scrise. 
+Pe lângă documentarea semanticii limbajului, lucrarea descrie detalii de implementare și explică modul în care este utilizat Dynamic Language Runtime.
 
 \end{document}
