--- a/doc/rezumat.tex
+++ b/doc/rezumat.tex
@@ -16,9 +16,9 @@
 
 În ultimii ani însă, odată cu reducerea exponențială a costurilor hardware-ului — mulțumită legii lui Moore — accentul a început să se pună din ce în ce mai puțin pe eficiență și din ce în ce mai mult pe timpul de dezvoltare. Performanța limbajelor dinamice a devenit „suficientă”, ceea ce a condus la o adevărată renaștere a acestora.
 
-Atât Sun cât și Microsoft și-au arătat interesul pentru limbajele dinamice prin proiectele The Da Vinci Machine și Dynamic Language Runtime și sprijinirea dezvoltării limbajelor JRuby, Jython, IronRuby, IronPython, etc.
+Lucrarea de față prezintă un limbaj dinamic numit Bonsai. Platforma utilizată pentru implementare este .NET Framework, împreună cu Dynamic Language Runtime. Întreaga suită de biblioteci .NET este astfel disponibilă, indiferent de limbajul în care au fost ele scrise.
 
-Lucrarea de față prezintă un limbaj dinamic numit Bonsai. Principalele sale caracteristici sunt:
+Principalele caracteristici ale limbajului sunt:
 \begin{itemize}
 \item simplitate: gramatică minimală, zero cuvinte cheie
 \item orice instanță este privită ca o funcție;
@@ -30,6 +30,6 @@ Lucrarea de față prezintă un limbaj dinamic numit Bonsai. Principalele sale c
 \item poate utiliza bibliotecile .NET.
 \end{itemize}
 
-Pe lângă documentarea semanticii limbajului, lucrarea descrie detalii de implementare și explică modul în care este utilizat Dynamic Language Runtime.
+Pe lângă documentarea semanticii limbajului, lucrarea descrie detalii de implementare și explică modul în care Dynamic Language Runtime poate fi utilizat pentru realizarea unui limbaj dinamic.
 
 \end{document}
